syntax = "proto3";
package kratos.api;

option go_package = "mshop/service/inventory/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Services services = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

// 微服务配置
message Services {
  message GoodsService {
    string endpoint = 1;  // goods 服务地址 (例如: "127.0.0.1:9000")
    google.protobuf.Duration timeout = 2;  // 超时时间
  }
  GoodsService goods = 1;
}
